<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registrerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/usernameLabel"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@id/registrerLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/username"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/username"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameLabel"
            app:layout_constraintBottom_toTopOf="@id/passwordLabel"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/password"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            app:layout_constraintBottom_toTopOf="@id/repeatPassLabel"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/repeatPassLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/repeatPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeatPassLabel"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeatPass"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLabel"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="18sp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"

            android:background="@drawable/button_border"
            android:minHeight="45dp"
            android:minWidth="150dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="number"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:minWidth="150dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="18sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>