<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logo"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginTop="60dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/appName">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@mipmap/logo_foreground"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:minWidth="150dp"
                android:minHeight="55dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appName"
                app:layout_constraintBottom_toTopOf="@id/registrer"
                android:text="@string/login"
                android:textColor="@color/black"
                android:background="@drawable/button_border"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:onClick="sendToLoginPage"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:minWidth="150dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="75dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:background="@drawable/button_border"
                android:textSize="18sp"
                android:onClick="sendToRegisterPage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>